--- a/style.css
+++ b/style.css
@@ -287,3 +287,12 @@ dialog::backdrop {
 	font-size: 1rem;
 	margin-bottom: 2rem;
 }
+@media (max-width:500px) {
+	header {
+		flex-direction: row;
+		flex-wrap: wrap;
+		gap: 0.5rem;
+		justify-content: space-between;
+		align-items: center;
+	}
+}
