--- a/style.css
+++ b/style.css
@@ -289,10 +289,15 @@ dialog::backdrop {
 }
 @media (max-width:500px) {
 	header {
+		display:flex;
 		flex-direction: row;
 		flex-wrap: wrap;
-		gap: 0.5rem;
+		gap: 0.3rem;
 		justify-content: space-between;
 		align-items: center;
 	}
+	header h1 { 
+                font-size: 1.5rem;
+	}
+		
 }
