--- a/style.css
+++ b/style.css
@@ -287,7 +287,7 @@ dialog::backdrop {
 	font-size: 1rem;
 	margin-bottom: 2rem;
 }
-@media (max-width:500px) {
+@media (min-width:600px) {
 	header {
 		display:flex;
 		flex-direction: row;
